# retro-rocket

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BASIC_BEGINNER.md  BOOTFLOW.md  CMakeLists.txt  DoxyLayout.xml  Doxyfile  INTERRUPTS.md  LICENSE  MEMORY.md  README.md  RETROFS.md  build-boot-image.php  build-usb.php  gdbargs-basic  limine-hdd.cfg  limine-hdd.conf  limine-usb.conf  limine.cfg  limine.conf
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: automerge.yml  ci.yml  codeql.yml  static.yml
asm/: boot.asm  loader.S  math.asm  spinlock.asm  sse.asm
buildtools/: linker.ld  makeiso.sh  mk-ca-bundle.pl
cmake/: custom_targets.cmake
docpages/: BASIC.md  BASIC_BEGINNER.md  INDEX.md  MODULES.md  RETROFS.md  THIRDPARTY.md  footer.html  header.html  mobile-nav.js  rrbasic.js  style.css
docpages/basic-language-reference/: BASIC.md  BASIC_BEGINNER.md  BASIC_DIFFERENCES.md  BASIC_ERROR_LIST.md  BASIC_SOUND.md  INDEX.md  NETWORKING.md  TASKS.md
docpages/kernel-dev/: 06_INDEX.md  BOOTFLOW.md  INTERRUPTS.md  MEMORY.md  MODULES.md  PROFILING.md  RETROFS.md
docpages/user-guide/: 07_INDEX.md  creating-boot-media.md  desktop-and-shell.md  file-system.md  getting-started.md  glossary.md  installation.md  introduction.md  networking.md  saving-your-work.md  sound-and-graphics.md  system-requirements.md  troubleshooting.md  working-with-programs.md
docs/: 00__INDEX_8md.html  00___i_n_d_e_x_8md.html  01__INDEX_8md.html  02__INDEX_8md.html  03__INDEX_8md.html  04__INDEX_8md.html  05__INDEX_8md.html  06__INDEX_8md.html  07__INDEX_8md.html  08__INDEX_8md.html  09__INDEX_8md.html  1.html  ABS.html  ABS_8md.html  ACS.html  ACS_8md.html  ADFSIMAGE.html  ANIMATE.html  ARRAYFIND.html  ARRSORT.html  ARRSORTBY.html  ASC.html  ASC_8md.html  ASN.html  ASN_8md.html  ATAN.html  ATAN2.html  ATAN2_8md.html  ATAN_8md.html  AUTOFLIP.html  AUTOFLIP_8md.html  Array_8md.html  BACKGROUND.html  BACKGROUND_8md.html  BASIC_8md.html  BASIC__BEGINNER_8md.html  BIGABSS.html  BIGADDS.html  BIGCMP.html  BIGDIVS.html  (+2753 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_26.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  (+209 more)
docs/xml/: 00__INDEX_8md.xml  00___i_n_d_e_x_8md.xml  01__INDEX_8md.xml  02__INDEX_8md.xml  03__INDEX_8md.xml  04__INDEX_8md.xml  05__INDEX_8md.xml  06__INDEX_8md.xml  07__INDEX_8md.xml  08__INDEX_8md.xml  09__INDEX_8md.xml  1.xml  ABS.xml  ABS_8md.xml  ACS.xml  ACS_8md.xml  ANIMATE.xml  ANIMATE_8md.xml  ASC.xml  ASC_8md.xml  ASN.xml  ASN_8md.xml  ATAN.xml  ATAN2.xml  ATAN2_8md.xml  ATAN_8md.xml  AUTOFLIP.xml  AUTOFLIP_8md.xml  Array_8md.xml  BACKGROUND.xml  BACKGROUND_8md.xml  BASIC_8md.xml  BASIC__BEGINNER_8md.xml  BASIC__DIFFERENCES_8md.xml  BASIC__ERROR__LIST_8md.xml  BASIC__SOUND_8md.xml  BINREAD.xml  BINREAD_8md.xml  BINWRITE.xml  BINWRITE_8md.xml  (+1408 more)
grub-boot/: BSDmakefile  Makefile  bochsrc  errorhandler.c  errorhandler.h  interrupts.c  interrupts.h  io.h  kernel.h  keyboard.c  keyboard.h  makepad.pl  multiboot-kernel.c  printf.c  printf.h  string.c  string.h  video.c  video.h
grub-boot/src/: keyboard.c
include/: acpi.h  adfs.h  ahci.h  allocator.h  apic.h  arp.h  ata.h  audio.h  basic.h  basic_tokenizer.h  block_cache.h  buddy_allocator.h  clock.h  cpuid.h  cv.h  debug_ringbuffer.h  debugger.h  devfs.h  devicename.h  dfs.h  dhcp.h  dns.h  doubly_linked_list.h  drawing.h  e1000.h  errorhandler.h  ethernet.h  ext2.h  fat32.h  filesystem.h  flanterm.h  fpu.h  fred.h  gdt.h  guid.h  hashmap.h  homer.h  html_md.h  icmp.h  idt.h  (+58 more)
include/basic/: array.h  audio.h  bignum.h  builtin_file_io_functions.h  builtin_integer_functions.h  builtin_real_functions.h  builtin_string_functions.h  console.h  context.h  data.h  datetime.h  defines.h  expression.h  flow_control.h  graphics.h  lowlevel.h  map.h  memory_grants.h  peekpoke.h  process.h  reflection.h  security.h  sockets.h  structs.h  tokenizer.h  unified_expression.h  validation.h  variable.h
include/flanterm/: fb.h
include/games/: guess_the_word.h
include/mbedtls/: config.h  mbedtls_config.h
kernel64/: .gdbargs  .gitignore  CMakeLists.txt  Makefile  bochs.conf  limine.cfg
kernel64/asm/: Makefile  boot.asm  loader.S  spinlock.asm
kernel64/buildtools/: makeiso.sh
kernel64/grub/: grub.cfg  menu.lst  stage2_eltorito
kernel64/hydrogen/: Makefile  README.mdown  bochsout.txt  bochsrc.txt  link.ld
kernel64/include/: apic.h  ata.h  cpuid.h  debugger.h  devfs.h  fat32.h  filesystem.h  gdt.h  hydrogen.h  idt.h  input.h  interrupt.h  io.h  ioapic.h  iso9660.h  kernel.h  kmalloc.h  limine.h  memcpy.h  multiboot.h  paging.h  pci.h  printf.h  spinlock.h  string.h  taskswitch.h  timer.h  tokenizer.h  ubasic.h  video.h
kernel64/loader/: Makefile  linker.ld  loader.asm  loader.c
kernel64/src/: acpi.c  apic.c  (+27 more)
limine/: BOOTX64.EFI  LICENSE  Makefile  limine-bios-hdd.h  limine-bios.sys  limine.c  limine.h
multiboot/: .gdbargs  BSDmakefile  Makefile  bochsrc  linker.ld  makeiso.pl  menu.lst  sh
src/: Makefile  acpi.c  ahci.c  allocator.c  ap.c  apic.c  arp.c  ata.c  basic.c  basic_array.c  basic_console.c  basic_double_expression.c  basic_file_io.c  basic_flow_control.c  basic_function.c  basic_graphics.c  basic_int_expression.c  basic_lowlevel.c  basic_maths.c  basic_process.c  basic_sockets.c  basic_string.c  basic_string_expression.c  basic_tokenizer.c  basic_variable.c  buddy_allocator.c  clock.c  cpuid.c  debug_ringbuffer.c  debugger.c  devfs.c  devicename.c  dhcp.c  dns.c  drawing.c  e1000.c  errorhandler.c  ethernet.c  fat32.c  fb.c  (+50 more)
test/: Makefile  testflat.c
uacpi/: README.md
uacpi/tests/runner/: CMakeLists.txt  api_tests.c  argparser.h  barebones_runner.c  helpers.c  helpers.h  interface_impl.c  os.h  resource_tests.c  test_runner.c
(+812 files in other folders)
